refactor(ai): 将AI聊天服务改为异步实现并优化消息处理
- 将AiHttpClient接口从同步执行改为返回CompletionStage异步执行
- 更新UnirestAiHttpClient实现以支持异步HTTP请求处理
- 将所有AI提供商(chat方法)改为异步实现，返回CompletionStage
- 重构AiAgentLoop以支持异步执行和更好的错误处理
- 优化AiConversationStore中的消息移除逻辑，使用removeFirst替代remove(0)
- 简化AiChatInput解析逻辑，移除allCommand参数并改进命令匹配
- 移除不再使用的ai_all_command配置选项
- 更新AiChatService以支持异步消息处理和线程池管理
- 使用新的模式匹配语法简化内容解析逻辑